@@ -8,6 +8,7 @@ svn HEAD
 
  Bugfixes
  * youtube list works without --owner flag again.
+ * Picasa uploads are case-insensitive for file extensions.
 
 version 0.9.9
  Enhancements
